syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.exc";
option java_outer_classname = "HelloGrpcProto";

package hello;

service HelloGrpc {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service LegacyHelloGrpc {
  rpc LegacySayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
